Blog settings, and update ui stuff

--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -1,8 +1,8 @@
 dataSource.driverClassName=com.mysql.jdbc.Driver
 dataSource.url=jdbc:mysql://127.0.0.1/spring_blog
 dataSource.username=root
-dataSource.password=
+dataSource.password=g83b6OngpQdibmz
 
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=update
-hibernate.show_sql=true
+hibernate.show_sql=false
