--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -1,7 +1,7 @@
 dataSource.driverClassName=com.mysql.jdbc.Driver
 dataSource.url=jdbc:mysql://127.0.0.1/spring_blog
 dataSource.username=root
-dataSource.password=g83b6OngpQdibmz
+dataSource.password=
 
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=update
