--- a/src/main/resources/dev_app.properties
+++ b/src/main/resources/dev_app.properties
@@ -6,3 +6,7 @@ dataSource.password=
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=false
+
+redis.host=localhost
+redis.port=6379
+redis.default_expire_time=86400
