--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,7 @@ dependencies {
 
     // Utilities
     compile 'com.google.guava:guava:+'
+    compile 'org.modelmapper:modelmapper:0.7.5'
 
     // static resources, ref. http://www.webjars.org/
     compile 'org.webjars:jquery:2.1.4'
