Use lombok to generate getters and setters

--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     // Utilities
     compile 'com.google.guava:guava:+'
     compile 'org.modelmapper:modelmapper:0.7.5'
+    compile 'org.projectlombok:lombok:1.16.6'
 
     // static resources, ref. http://www.webjars.org/
     compile 'org.webjars:jquery:2.1.4'
