--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,9 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
-apply plugin: 'org.akhikhl.gretty'
-//apply plugin: 'spring-boot'
-
+//apply plugin: 'org.akhikhl.gretty'
+apply plugin: 'spring-boot'
+//
 // JDK 8
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -27,16 +27,23 @@ task warProduction(type: War){
 
 dependencies {
     // spring boot
-    compile("org.springframework.boot:spring-boot-starter-web")
+    compile "org.springframework.boot:spring-boot-starter-web:1.3.0.M5"
+    compile "org.springframework.boot:spring-boot-starter-jetty"
+    compile "org.springframework.boot:spring-boot-starter-thymeleaf"
+    compile "com.domingosuarez.boot:spring-boot-starter-jade4j:0.3.1"
+    compile "org.springframework.boot:spring-boot-starter-redis"
+    compile(group: 'org.springframework.boot', name: 'spring-boot-starter', version:'1.3.0.M5') {
+        exclude(module: 'spring-boot-starter-logging')
+    }
+    compile 'org.springframework.boot:spring-boot-starter-log4j:1.3.0.M5'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.3.0.M5'
+    compile 'org.springframework.boot:spring-boot-starter-security:1.3.0.M5'
 
     // spring framework
     compile 'org.springframework:spring-context:4.2.1.RELEASE'
     compile 'org.springframework:spring-webmvc:4.1.7.RELEASE'
     compile 'org.springframework.security:spring-security-config:3.2.7.RELEASE'
     compile 'org.springframework.security:spring-security-web:3.2.7.RELEASE'
-
-    compile 'org.thymeleaf:thymeleaf-spring4:+'
-    compile 'org.thymeleaf.extras:thymeleaf-extras-springsecurity3:+'
 
     //persistence
     compile 'com.zaxxer:HikariCP:+'
@@ -99,10 +106,6 @@ dependencies {
     testCompile 'org.objenesis:objenesis:+'
     testCompile 'org.springframework:spring-test:+'
 
-    compile 'javax.servlet:jstl:1.2'
-
-    //include in compile only, exclude in the war
-    providedCompile 'javax.servlet:servlet-api:2.5'
 }
 
 //Gretty Embedded Jetty
@@ -130,8 +133,9 @@ buildscript {
 // Don't use Jetty8, even it's a servlet 3.0+ container,
 // but not support non-jar WebApplicationInitializer scanning.
 // It will cause "No Spring WebApplicationInitializer types detected on classpath"
-gretty {
-    port = 8080
-    contextPath = ''
-    servletContainer = 'jetty9' //tomcat7 or tomcat8
-}
+// gretty {
+//    port = 8080
+//    contextPath = ''
+//    servletContainer = 'jetty9' //tomcat7 or tomcat8
+// }
+//
