--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ hibernate.show_sql=false
 redis.host=localhost
 redis.port=6379
 redis.default_expire_time=86400
+
+spring.thymeleaf.cache=false
+
+spring.jade4j.caching=false
