display posts by tag

--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,7 @@ dependencies {
     compile 'com.google.guava:guava:+'
     compile 'org.modelmapper:modelmapper:0.7.5'
     compile 'org.projectlombok:lombok:1.16.6'
+    //compile 'com.qiniu:qiniu-java-sdk:7.0.+'
 
     // static resources, ref. http://www.webjars.org/
     compile 'org.webjars:jquery:2.1.4'
