a simple and clean theme

--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
-//apply plugin: 'org.akhikhl.gretty'
-//apply plugin: 'war'
 
-//
-// JDK 8
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -18,7 +14,7 @@ repositories {
     mavenCentral()
 
     maven { url 'http://repo.spring.io/libs-release' }
-    maven { url "http://repo.springsource.org/repo" } // for springloaded
+    maven { url "http://repo.springsource.org/repo" }
 }
 
 bootRun {
@@ -28,11 +24,6 @@ bootRun {
 configurations {
     compile.exclude module: "spring-boot-starter-tomcat"
 }
-
-//task warProduction(type: War){
-//    destinationDir = file("$buildDir/dist")
-//    baseName = "$rootProject.name-production"
-//}
 
 dependencies {
     // spring boot
@@ -118,7 +109,7 @@ dependencies {
 
 }
 
-//Gretty Embedded Jetty
+
 buildscript {
     ext {
         springBootVersion = '1.2.6.RELEASE'
@@ -130,22 +121,10 @@ buildscript {
 
         maven { url "http://repo.spring.io/release" }
         maven { url "http://repo.spring.io/milestone" }
-        maven { url "http://repo.spring.io/snapshot" }
+        // maven { url "http://repo.spring.io/snapshot" }
     }
 
     dependencies {
-        classpath 'org.akhikhl.gretty:gretty:+'
-        classpath 'org.springframework:springloaded:1.2.4.RELEASE'
         classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
     }
 }
-
-// Don't use Jetty8, even it's a servlet 3.0+ container,
-// but not support non-jar WebApplicationInitializer scanning.
-// It will cause "No Spring WebApplicationInitializer types detected on classpath"
-// gretty {
-//    port = 8080
-//    contextPath = ''
-//    servletContainer = 'jetty9' //tomcat7 or tomcat8
-// }
-//
