Windows中文环境解决The server time zone value '?й???????' is unrecognized问题，增加serverTimezon=UTC

--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -14,7 +14,7 @@ spring:
 
     dataSource:
       driverClassName: com.mysql.jdbc.Driver
-      url: jdbc:mysql://127.0.0.1/spring_blog
+      url: jdbc:mysql://127.0.0.1/spring_blog?serverTimezone=UTC
       username: root
       password:
 
