--- a/build.gradle
+++ b/build.gradle
@@ -27,28 +27,28 @@ configurations {
 
 dependencies {
     // spring boot
-    compile "org.springframework.boot:spring-boot-starter-web:1.3.0.M5"
-    compile "org.springframework.boot:spring-boot-starter-jetty"
-    compile "org.springframework.boot:spring-boot-starter-thymeleaf"
+    compile "org.springframework.boot:spring-boot-starter-web:1.4.0.RELEASE"
+    compile "org.springframework.boot:spring-boot-starter-jetty:1.4.0.RELEASE"
+    compile "org.springframework.boot:spring-boot-starter-thymeleaf:1.4.0.RELEASE"
     compile "com.domingosuarez.boot:spring-boot-starter-jade4j:0.3.1"
-    compile "org.springframework.boot:spring-boot-starter-redis"
-    compile(group: 'org.springframework.boot', name: 'spring-boot-starter', version:'1.3.0.M5') {
+    compile "org.springframework.boot:spring-boot-starter-redis:1.4.0.RELEASE"
+    compile(group: 'org.springframework.boot', name: 'spring-boot-starter', version:'1.4.0.RELEASE') {
         exclude(module: 'spring-boot-starter-logging')
     }
-    compile 'org.springframework.boot:spring-boot-starter-log4j:1.3.0.M5'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.3.0.M5'
-    compile 'org.springframework.boot:spring-boot-starter-security:1.3.0.M5'
+    compile 'org.springframework.boot:spring-boot-starter-log4j:1.4.0.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.4.0.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-security:1.4.0.RELEASE'
 
     // spring framework
-    compile 'org.springframework:spring-context:4.2.1.RELEASE'
-    compile 'org.springframework:spring-webmvc:4.1.7.RELEASE'
+    compile 'org.springframework:spring-context:4.2.7.RELEASE'
+    compile 'org.springframework:spring-webmvc:4.2.7.RELEASE'
     compile 'org.springframework.security:spring-security-config:3.2.7.RELEASE'
     compile 'org.springframework.security:spring-security-web:3.2.7.RELEASE'
 
     //persistence
     compile 'com.zaxxer:HikariCP:+'
-    compile 'org.springframework:spring-orm:+'
-    compile 'org.hibernate:hibernate-entitymanager:+'
+    compile 'org.springframework:spring-orm:4.2.7.RELEASE'
+    compile 'org.hibernate:hibernate-entitymanager:4.3.11.Final'
     compile 'javax.el:javax.el-api:+'
     compile 'org.hsqldb:hsqldb:+'
 
@@ -61,17 +61,17 @@ dependencies {
     compile 'org.pygments:pygments:2.0.2'
 
     // spring data
-    compile 'org.springframework.data:spring-data-jpa:+'
+    compile 'org.springframework.data:spring-data-jpa:1.10.0.RELEASE'
 
     // cache
-    compile 'org.springframework.data:spring-data-redis:1.6.0.RELEASE'
+    compile 'org.springframework.data:spring-data-redis:1.7.0.RELEASE'
     compile 'redis.clients:jedis:2.7.3'
 
     // MySQL
     compile 'mysql:mysql-connector-java:+'
 
     // Validation
-    compile 'org.hibernate:hibernate-validator:+'
+    compile 'org.hibernate:hibernate-validator:4.3.2.Final'
 
     // Logging
     compile 'ch.qos.logback:logback-classic:1.1.3'
@@ -98,7 +98,7 @@ dependencies {
     compile 'org.webjars:ace:1.2.0'
 
     // test
-    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("org.springframework.boot:spring-boot-starter-test:1.4.0.RELEASE")
     testCompile 'junit:junit:+'
     testCompile 'org.mockito:mockito-core:+'
     testCompile 'org.assertj:assertj-core:+'
