--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ bootRun {
 
 configurations {
     compile.exclude module: "spring-boot-starter-tomcat"
+    all*.exclude module: 'spring-boot-starter-logging'
 }
 
 dependencies {
@@ -35,7 +36,7 @@ dependencies {
     compile(group: 'org.springframework.boot', name: 'spring-boot-starter', version:'1.4.0.RELEASE') {
         exclude(module: 'spring-boot-starter-logging')
     }
-    compile 'org.springframework.boot:spring-boot-starter-log4j:1.4.0.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-log4j:1.3.7.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.4.0.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-security:1.4.0.RELEASE'
 
@@ -118,6 +119,7 @@ buildscript {
     repositories {
         mavenLocal()
         jcenter()
+	mavenCentral()
 
         maven { url "http://repo.spring.io/release" }
         maven { url "http://repo.spring.io/milestone" }
