--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
+group = 'com.raysmond.blog'
+version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-version = '0.1'
 
 repositories {
     mavenLocal()
@@ -21,37 +20,28 @@ bootRun {
     systemProperties = System.properties
 }
 
-configurations {
-    compile.exclude module: "spring-boot-starter-tomcat"
-    all*.exclude module: 'spring-boot-starter-logging'
+buildscript {
+    ext {
+        springBootVersion = '1.5.9.RELEASE'
+    }
+    repositories {
+        mavenLocal()
+        jcenter()
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
 dependencies {
     // spring boot
-    compile "org.springframework.boot:spring-boot-starter-web:1.4.0.RELEASE"
-    compile "org.springframework.boot:spring-boot-starter-jetty:1.4.0.RELEASE"
-    compile "org.springframework.boot:spring-boot-starter-thymeleaf:1.4.0.RELEASE"
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-thymeleaf"
     compile "com.domingosuarez.boot:spring-boot-starter-jade4j:0.3.1"
-    compile "org.springframework.boot:spring-boot-starter-redis:1.4.0.RELEASE"
-    compile(group: 'org.springframework.boot', name: 'spring-boot-starter', version:'1.4.0.RELEASE') {
-        exclude(module: 'spring-boot-starter-logging')
-    }
-    compile 'org.springframework.boot:spring-boot-starter-log4j:1.3.7.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.4.0.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-security:1.4.0.RELEASE'
-
-    // spring framework
-    compile 'org.springframework:spring-context:4.2.7.RELEASE'
-    compile 'org.springframework:spring-webmvc:4.2.7.RELEASE'
-    compile 'org.springframework.security:spring-security-config:3.2.7.RELEASE'
-    compile 'org.springframework.security:spring-security-web:3.2.7.RELEASE'
-
-    //persistence
-    compile 'com.zaxxer:HikariCP:+'
-    compile 'org.springframework:spring-orm:4.2.7.RELEASE'
-    compile 'org.hibernate:hibernate-entitymanager:4.3.11.Final'
-    compile 'javax.el:javax.el-api:+'
-    compile 'org.hsqldb:hsqldb:+'
+    compile "org.springframework.boot:spring-boot-starter-redis:1.4.7.RELEASE"
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'org.springframework.boot:spring-boot-starter-security'
 
     // view
     compile 'de.neuland-bfi:spring-jade4j:0.4.2'
@@ -61,26 +51,11 @@ dependencies {
     compile 'org.python:jython-standalone:2.7.0'
     compile 'org.pygments:pygments:2.0.2'
 
-    // spring data
-    compile 'org.springframework.data:spring-data-jpa:1.10.0.RELEASE'
-
-    // cache
-    compile 'org.springframework.data:spring-data-redis:1.7.0.RELEASE'
-    compile 'redis.clients:jedis:2.7.3'
-
-    // MySQL
+    // mysql/hibernate
     compile 'mysql:mysql-connector-java:+'
-
-    // Validation
-    compile 'org.hibernate:hibernate-validator:4.3.2.Final'
-
-    // Logging
-    compile 'ch.qos.logback:logback-classic:1.1.3'
-    compile 'org.slf4j:slf4j-api:+'
-    compile 'org.apache.commons:commons-lang3:+'
-
-    // @Inject
-    compile 'javax.inject:javax.inject:+'
+    compile "org.hibernate:hibernate-core:5.2.12.Final"
+    compile "org.hibernate:hibernate-entitymanager:5.2.12.Final"
+    compile "org.hibernate:hibernate-validator"
 
     // JSON
     compile 'com.fasterxml.jackson.core:jackson-databind:2.4.1.3'
@@ -88,8 +63,9 @@ dependencies {
 
     // Utilities
     compile 'com.google.guava:guava:+'
-    compile 'org.modelmapper:modelmapper:0.7.5'
-    compile 'org.projectlombok:lombok:1.16.6'
+    compile 'org.modelmapper:modelmapper:+'
+    compile 'org.projectlombok:lombok:+'
+    compile 'org.apache.commons:commons-lang3:+'
     //compile 'com.qiniu:qiniu-java-sdk:7.0.+'
 
     // static resources, ref. http://www.webjars.org/
@@ -99,34 +75,8 @@ dependencies {
     compile 'org.webjars:ace:1.2.0'
 
     // test
-    testCompile("org.springframework.boot:spring-boot-starter-test:1.4.0.RELEASE")
     testCompile 'junit:junit:+'
-    testCompile 'org.mockito:mockito-core:+'
-    testCompile 'org.assertj:assertj-core:+'
-    testCompile 'org.hamcrest:hamcrest-core:+'
-    testCompile 'org.hamcrest:hamcrest-library:+'
-    testCompile 'org.objenesis:objenesis:+'
-    testCompile 'org.springframework:spring-test:+'
-
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test')
 }
 
-
-buildscript {
-    ext {
-        springBootVersion = '1.2.6.RELEASE'
-    }
-
-    repositories {
-        mavenLocal()
-        jcenter()
-	mavenCentral()
-
-        maven { url "http://repo.spring.io/release" }
-        maven { url "http://repo.spring.io/milestone" }
-        // maven { url "http://repo.spring.io/snapshot" }
-    }
-
-    dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-    }
-}
