--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 server:
-    port: 9000
-    contextPath:
+    port: 8080
 
 spring:
     profiles:
@@ -9,22 +8,38 @@ spring:
     thymeleaf:
         cache: false
 
+    devtools:
+        restart:
+            enabled: true
+
     jade4j:
         caching: false
 
-    dataSource:
-      driverClassName: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://mysql/spring_blog?serverTimezone=UTC
-      username: root
-      password: 123456
+    jpa:
+        database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+        database: MYSQL
+        show-sql: true
+        generate-ddl: true
+        hibernate:
+          ddl-auto: update
+          dialect: org.hibernate.dialect.MySQL5Dialect
 
-    hibernate:
-      dialect: org.hibernate.dialect.MySQLDialect
-      hbm2ddl.auto: update
-      show_sql: false
+    datasource:
+      driver-class-name: com.mysql.jdbc.Driver
+      url: jdbc:mysql://127.0.0.1/spring_blog_dev
+      username: root
+      password:
 
     redis:
       host: localhost
       port: 6379
       default_expire_time: 86400
 
+logging:
+  level:
+    org.springframework.web: ERROR
+    com.raysmond.blog: DEBUG
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+#  file: /Users/mkyong/application.log
