--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,20 @@
 {
   "name": "springblog",
   "version": "0.0.0",
-  "appPath": "src/main/resources",
+  "appPath": "src/main/webapp",
   "testPath": "src/test/javascript/spec",
   "dependencies": {
     "jquery": "2.1.4",
+    "bootstrap": "3.3.7",
+    "fontawesome": "4.7.0",
     "marked": "0.3.5",
     "simple-module": "2.0.6",
     "simple-hotkeys": "1.0.3",
     "simditor": "2.3.5",
     "simditor-markdown": "1.1.2",
     "to-markdown": "1.3.0",
-    "adminlte": "2.3.6"
+    "adminlte": "2.3.6",
+    "ace-builds": "1.2.9"
   },
   "devDependencies": {}
 }
