--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -21,3 +21,8 @@ spring:
       host: localhost
       port: 6379
       default_expire_time: 86400
+
+logging:
+  level:
+    org.springframework.web: ERROR
+    com.raysmond.blog: INFO
