--- a/.bowerrc
+++ b/.bowerrc
@@ -1,3 +1,4 @@
 {
-  "directory": "src/main/webapp/bower_components"
+  "allow_root": true,
+  "directory": "src/main/resources/static/bower_components"
 }
