--- a/bower.json
+++ b/bower.json
@@ -9,9 +9,10 @@
     "fontawesome": "4.7.0",
     "marked": "0.3.5",
     "to-markdown": "1.3.0",
-    "adminlte": "2.3.6",
     "highlightjs": "9.12.0",
-    "ace-builds": "1.2.9"
+    "ace-builds": "1.2.9",
+    "contents": "4.0.2",
+    "sticky-kit": "1.1.2"
   },
   "devDependencies": {}
 }
