--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,11 +10,31 @@ spring:
         hibernate:
           ddl-auto: update
           dialect: org.hibernate.dialect.MySQL5Dialect
+        properties:
+          hibernate:
+            generate_statistics: true
+            cache:
+              use_second_level_cache: true
+              use_query_cache: true
+              region:
+                factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
 
     thymeleaf:
         mode: LEGACYHTML5
+
+    cache:
+        ehcache:
+          config: classpath:ehcache.xml
 
 logging:
   level:
     org.springframework.web: ERROR
     com.raysmond.blog: DEBUG
+
+# Redisson configuration file
+redisson-config: conf/redisson.yaml
+
+management:
+  security:
+    enabled: true
+    roles: ROLE_ADMIN
